# accessor

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: admin_credentials_create.py  send_create_access_clickhouse.py  send_create_access_mariadb.py  send_create_access_mongodb.py  send_create_access_postgresql.py  send_create_access_redis.py  send_revoke_clickhouse.py  send_revoke_mariadb.py  send_revoke_mongo.py  send_revoke_postgtresql.py  send_revoke_redis.py
src/: alembic.ini  fast_grpc.proto  fast_grpc_pb2.py  fast_grpc_pb2_grpc.py
src/connector_worker/: app.py  config.py
src/connector_worker/event_handlers/: create_access.py  revoke_access.py
src/connector_worker/models/: access_requests.py  resources.py
src/connector_worker/models/configs/: db_config.py
src/connector_worker/providers/: base.py  errors.py  select_provider.py
src/connector_worker/providers/db_providers/: base_db_provider.py  clickhouse.py  mariadb.py  mongodb.py  postgresql.py  (+1 more)
src/connector_worker/services/: secret_storage.py
src/connector_worker/utils/: secrets.py  users.py
src/server/: __main__.py  app.py  config.py  database.py  repositories.py  tables.py  utils.py
src/server/migrations/: env.py
src/server/models/: access_request_msg.py  common.py
src/server/repositories/: access_account.py  access_request.py  resources.py  revoke_requests.py
src/server/views/: access_request.py  access_requests_accounts.py  resources.py  revokes_access_request.py
src/services/secret_service/: __init__.py  client.py  models.py
(+20 files in other folders)
