[tool.poetry]
name = "accesor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faststream = {extras = ["cli", "kafka"], version = "^0.6.4"}
python-dateutil = "^2.9.0.post0"
asyncpg = "^0.31.0"
sqlalchemy = {extras = ["async"], version = "^2.0.45"}
alembic = "^1.17.2"
greenlet = "^3.3.0"
motor = "^3.7.1"
aiomysql = "^0.3.2"
aiochclient = {extras = ["aiohttp"], version = "^2.6.0"}
redis = "^7.1.0"
googleapis-common-protos = "^1.72.0"
protobuf = "^6.33.2"
grpcio = "^1.76.0"
grpcio-tools = "^1.76.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
sentry-sdk = "^2.47.0"
python-fast-grpc = "^0.3.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.8"
black = "^25.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.lint]
select = ['Q', 'F', 'I', 'ANN', 'B', 'C4', 'TID', 'ARG', 'PLR']
ignore = [
    'ANN101', 'ANN204', 'ANN401', 'ANN002', 'ANN003',
    'PLR0913', 'ANN202', 'ANN201', 'ANN001',
    'ANN206', 'ANN102', 'C408'
]
# ANN - https://beta.ruff.rs/docs/rules/#flake8-annotations-ann,
# PLR0913 - Too many arguments


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Unused import

[tool.ruff.format]
quote-style = 'double'

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.black]
skip-string-normalization = true
exclude = '(\.git|\.venv|\.idea)'
line-length = 120